--- a/david/views/pages/admin.ejs
+++ b/david/views/pages/admin.ejs
@@ -85,7 +85,7 @@
               <li><a href="/contact">contact us</a></li>
           </ul>
             <div class="header-join-part">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">join us</button>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sign inModal">sign in</button>
             </div>
           </div>
         </nav>
