--- a/views/pages/withdraw.ejs
+++ b/views/pages/withdraw.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Broadtrademining - Isometric Investment Platform</title>
+  <title>Behoof - Isometric Investment Website HTML Templates</title>
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/icofont.css">
@@ -15,14 +15,23 @@
   <link rel="stylesheet" href="/css/nice-select.css">
   <link rel="stylesheet" href="/css/animate.css">
   <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="/css/responsive.css">
   <link rel="stylesheet" href="/css/jquery.toast.min.css">
 </head>
 <body>
 
   <!-- preloader start -->
-
+  <div class="preloader">
+    <div class="preloader-box">
+      <div>L</div>
+      <div>O</div>
+      <div>A</div>
+      <div>D</div>
+      <div>I</div>
+      <div>N</div>
+      <div>G</div>
+    </div>
+  </div>
   <!-- preloader end -->
 
     <!-- signin-area start -->
@@ -125,11 +134,16 @@
                 <div class="header-top-right d-flex align-items-center justify-content-end">
                     <div class="language-part">
                     <i class="fa fa-globe"></i>
-<div class="select d-inline-block w-auto ml-xl-3" id="google_translate_element"></div>
+                    <select>
+                        <option>Eng</option>
+                        <option>Ban</option>
+                        <option>Rus</option>
+                        <option>Arb</option>
+                    </select>
                     </div>
                     <div class="header-cart-count">
                     <a href="/dashboard">
-                      <i class="fa fa-tachometer"></i>
+                      <i class="fa fa-shopping-cart"></i>
                       <span>Dashboard</span>
                     </a>
                     </div>
@@ -305,15 +319,6 @@
   <script src="/js/jquery.paroller.min.js"></script>
   <script src="/js/contact.js"></script>
   <script src="/js/main.js"></script>
-  <script>
-    function googleTranslateElementInit() {
-        new google.translate.TranslateElement(
-            {pageLanguage: 'en'},
-            'google_translate_element'
-        );
-    }
-</script>
-<script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
   <script src="/js/jquery.toast.min.js"></script>
 
