--- a/david/views/pages/about.ejs
+++ b/david/views/pages/about.ejs
@@ -70,7 +70,7 @@
               <li><a href="/contact">contact us</a></li>
           </ul>
             <div class="header-join-part">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">join us</button>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sign inModal">sign in</button>
             </div>
           </div>
         </nav>
@@ -374,7 +374,7 @@
             <div class="cta-wrapper bg_img border-radius--10 text-center" data-background="/images/bg/bg-8.jpg">
               <h2 class="title mb-3">Get Started Today With Us</h2>
               <p>This is a Revolutionary Money Making Platform! Invest for Future in Stable Platform and Make Fast Money. Not only we guarantee the fastest and the most exciting returns on your investments, but we also guarantee the security of your investment.</p>
-              <a href="/registration" class="cmn-btn mt-4">Join Us</a>
+              <a href="/registration" class="cmn-btn mt-4">sign in</a>
             </div>
           </div>
         </div>
