--- a/david/views/pages/deposit.ejs
+++ b/david/views/pages/deposit.ejs
@@ -71,7 +71,7 @@
               <li><a href="/contact">contact us</a></li>
           </ul>
             <div class="header-join-part">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">join us</button>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sign innModal"sign inin</button>
             </div>
           </div>
         </nav>
