--- a/david/views/pages/index.ejs
+++ b/david/views/pages/index.ejs
@@ -70,7 +70,7 @@
               <li><a href="/contact">contact us</a></li>
           </ul>
             <div class="header-join-part">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">join us</button>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sign innModal"sign inin</button>
             </div>
           </div>
         </nav>
@@ -1090,7 +1090,7 @@
           <div class="col-xl-8">
               <h2 class="title mb-3">Get Started Today With Us</h2>
               <p>This is a Revolutionary Money Making Platform! Invest for Future in Stable Platform and Make Fast Money. Not only we guarantee the fastest and the most exciting returns on your investments, but we also guarantee the security of your investment.</p>
-              <a href="/registration" class="cmn-btn mt-4">Join Us</a>
+              <a href="/registration" class="cmn-btn mt-4">sign inn</a>
             </div>
           </div>
         </div>
