--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -125,12 +125,7 @@
                     <div class="header-top-right d-flex align-items-center justify-content-end">
                         <div class="language-part">
                         <i class="fa fa-globe"></i>
-                        <select>
-                            <option>Eng</option>
-                            <option>Ban</option>
-                            <option>Rus</option>
-                            <option>Arb</option>
-                        </select>
+                       <div class="select d-inline-block w-auto ml-xl-3" id="google_translate_element"></div>
                         </div>
                         <div class="header-cart-count">
                     <a href="/dashboard">
@@ -505,49 +500,103 @@
 
   <!-- footer-section start -->
   <footer class="footer-section">
-    <div class="footer-top bg_img" data-background="/images/footer-bg-3.png">
+    <div class="footer-top bg_img" data-background="/images/footer-bg.png">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-9">
-            <div class="section-header text-white text-center">
-              <span class="section-subtitle">Subscribe to Broadtrademining</span>
-              <h2 class="section-title">To Get Exclusive Benefits</h2>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center">
           <div class="col-lg-8">
-            <div class="subscribe-wrapper style--two">
-              <form class="subscribe-form">
-                <input type="text" name="subs_name" id="subs_name" placeholder="Your Email Address">
-                <button type="submit" class="subs-btn">subscribe</button>
-              </form>
+            <div class="section-header text-white text-center">
+              <span class="section-subtitle">Subscribe us</span>
+              <h2 class="section-title">For Newsletter</h2>
+              <p>Join 14,000+ satisfied Fast Invest customers! <a href="#0">Register</a> and Subscribe to our newsletter to receive all the latest news and updates. </p>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-3">
-            <div class="footer-widget">
+          <div class="col-lg-12">
+            <div class="subscribe-wrapper">
+              <span class="icon wow zoomIn" data-wow-duration="0.3s" data-wow-delay="0.5s"><img src="/images/icons/subscribe.png" alt="icon"></span>
+              <form class="subscribe-form">
+                <input type="text" name="subs_name" id="subs_name" placeholder="Your Email Address">
+                <button type="submit" class="subs-btn">subscribe<span class="btn-icon"><img src="/images/icons/paper-plane.png" alt="icon"></span></button>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-none-30">
+          <div class="col-lg-3 col-sm-6">
+            <div class="footer-widget mb-30">
               <h3 class="widget-title">About Broadtrademining</h3>
               <ul class="footer-menu-list">
-                <li><a href="/about">About us</a></li>
-                <li><a href="/contact">Contact Us</a></li>
-                <li><a href="/dashboard">Manage Your Account</a></li>
+                <li><a href="#0">About us</a></li>
+                <li><a href="#0">Contact Us</a></li>
+                <li><a href="#0">Latest Blog</a></li>
+                <li><a href="#0">Authenticity Guarantee</a></li>
+                <li><a href="#0">Customer Reviews</a></li>
+                <li><a href="#0">Privacy Policy</a></li>
+                <li><a href="#0">Business License</a></li>
+              </ul>
+            </div>
+          </div><!-- footer-widget end -->
+          <div class="col-lg-3 col-sm-6">
+            <div class="footer-widget mb-30">
+              <h3 class="widget-title">My Account</h3>
+              <ul class="footer-menu-list">
+                <li><a href="#0">Manage Your Account</a></li>
+                <li><a href="#0">How to Deposit</a></li>
+                <li><a href="#0">How to Withdraw</a></li>
+                <li><a href="#0">Account Varification</a></li>
+                <li><a href="#0">Safety & Security</a></li>
+                <li><a href="#0">Investments</a></li>
+                <li><a href="#0">Membership Level</a></li>
+              </ul>
+            </div>
+          </div><!-- footer-widget end -->
+          <div class="col-lg-3 col-sm-6">
+            <div class="footer-widget mb-30">
+              <h3 class="widget-title">help center</h3>
+              <ul class="footer-menu-list">
+                <li><a href="#0">Investor help centre</a></li>
+                <li><a href="#0">Entrepreneur help centre</a></li>
+                <li><a href="#0">FAQ</a></li>
+                <li><a href="#0">Quick Start Guide</a></li>
+                <li><a href="#0">Associate Blog</a></li>
+                <li><a href="#0">Tutorials</a></li>
+                <li><a href="#0">Returns & Claims</a></li>
+              </ul>
+            </div>
+          </div><!-- footer-widget end -->
+          <div class="col-lg-3 col-sm-6">
+            <div class="footer-widget mb-30">
+              <h3 class="widget-title">legal info</h3>
+              <ul class="footer-menu-list">
+                <li><a href="#0">Risk Warnings</a></li>
+                <li><a href="#0">Privacy Notice</a></li>
+                <li><a href="#0">Security</a></li>
+                <li><a href="#0">Terms of Service</a></li>
+                <li><a href="#0">Become Affiliate</a></li>
+                <li><a href="#0">Complaints Policy</a></li>
               </ul>
             </div>
           </div><!-- footer-widget end -->
         </div>
- 
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="btn-area text-center">
+              <a href="#0" class="wow zoomIn" data-wow-duration="0.3s" data-wow-delay="0.5s"><img src="/images/buttons/google.png" alt="button"></a>
+              <a href="#0" class="wow zoomIn" data-wow-duration="0.7s" data-wow-delay="0.5s"><img src="/images/buttons/apple.png" alt="button"></a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="footer-bottom">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6">
-            <p class="copy-right-text">Copyright © 2022.All Rights Reserved By <a href="/">Broadtrademining</a></p>
+          <div class="col-md-6">
+            <p class="copy-right-text text-md-left text-center mb-md-0 mb-3">Copyright © 2020.All Rights Reserved By <a href="/">Broadtrademining</a></p>
           </div>
-          <div class="col-lg-6">
-            <div class="card-list text-right">
+          <div class="col-md-6">
+            <div class="card-list text-md-right text-center">
               <a href="#0"><img src="/images/icons/card-options/americanexpress.png" alt="image"></a>
               <a href="#0"><img src="/images/icons/card-options/maestro.png" alt="image"></a>
               <a href="#0"><img src="/images/icons/card-options/visa.png" alt="image"></a>
