--- a/views/pages/affiliate.ejs
+++ b/views/pages/affiliate.ejs
@@ -24,24 +24,24 @@
 
   <!-- preloader end -->
 
-  <!-- signin-area start -->
-  <div class="modal fade" id="signInModal" tabindex="-1" role="dialog"  aria-hidden="true">
+  <!-- sign in-area start -->
+  <div class="modal fade" id="sign inModal" tabindex="-1" role="dialog"  aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content bdr-radius">
-        <div class="signin-wrapper">
-          <div class="signin-wrapper-header text-center">
+        <div class="sign in-wrapper">
+          <div class="sign in-wrapper-header text-center">
             <div class="logo"><img src="/images/elements/logo-icon.png" alt="image"></div>
             <h3 class="title">Login with</h3>
             <p>Welcome back, please sign in below</p>
           </div>
-          <form class="signin-form">
+          <form class="sign in-form">
             <div class="form-group">
-              <label for="signinEmail">Email*</label>
-              <input type="email" class="form-control" id="signinEmail" placeholder="Enter your Email">
+              <label for="sign inEmail">Email*</label>
+              <input type="email" class="form-control" id="sign inEmail" placeholder="Enter your Email">
             </div>
             <div class="form-group">
-              <label for="signinPass">Password*</label>
-              <input type="password" class="form-control" id="signinPass" placeholder="Password">
+              <label for="sign inPass">Password*</label>
+              <input type="password" class="form-control" id="sign inPass" placeholder="Password">
             </div>
             <div class="form-group">
               <div class="custom-checkbox">
@@ -52,7 +52,7 @@
             </div>
             <button type="submit" class="btn btn-primary btn-hover">Log In</button>
           </form>
-          <div class="signin-wrapper-footer">
+          <div class="sign in-wrapper-footer">
             <p class="bottom-text">Don’t have an account? <a href="#0" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal" aria-label="Close">Sign Up Now</a></p>
             <div class="divider"><span>or</span></div>
             <ul class="social-list">
@@ -65,29 +65,29 @@
       </div>
     </div>
   </div>
-  <!-- signin-area end -->
+  <!-- sign in-area end -->
   
   <!-- signup-area start -->
   <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog"  aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content bdr-radius">
-        <div class="signin-wrapper">
-          <div class="signin-wrapper-header text-center">
+        <div class="sign in-wrapper">
+          <div class="sign in-wrapper-header text-center">
             <div class="logo"><img src="/images/elements/logo-icon.png" alt="image"></div>
             <h3 class="title">Login with</h3>
             <p>Welcome back, please sign in below</p>
           </div>
-          <form class="signin-form">
+          <form class="sign in-form">
             <div class="form-group">
-              <label for="signinEmail">Email*</label>
+              <label for="sign inEmail">Email*</label>
               <input type="email" class="form-control" id="signupEmail" placeholder="Enter your Email">
             </div>
             <div class="form-group">
-              <label for="signinPass">Password*</label>
+              <label for="sign inPass">Password*</label>
               <input type="password" class="form-control" id="signupPass" placeholder="Password">
             </div>
             <div class="form-group">
-              <label for="signinPass">Confirm Password*</label>
+              <label for="sign inPass">Confirm Password*</label>
               <input type="password" class="form-control" id="signupRePass" placeholder="Password">
             </div>
             <div class="form-group">
@@ -99,8 +99,8 @@
             </div>
             <button type="submit" class="btn btn-primary btn-hover">Log In</button>
           </form>
-          <div class="signin-wrapper-footer">
-            <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
+          <div class="sign in-wrapper-footer">
+            <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#sign inModal" data-dismiss="modal" aria-label="Close">Login</a></p>
             <div class="divider"><span>or</span></div>
             <ul class="social-list">
               <li><a href="#0"><i class="fa fa-facebook-f"></i></a></li>
@@ -165,7 +165,7 @@
                 <li><a href="/contact">contact us</a></li>
             </ul>
               <div class="header-join-part">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">join us</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sign inModal">sign in</button>
               </div>
             </div>
         </nav>
