--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -156,7 +156,7 @@
                 <li><a href="/contact">contact us</a></li>
             </ul>
               <div class="header-join-part">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">join us</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">signin</button>
               </div>
             </div>
         </nav>
