--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -135,12 +135,7 @@
                     <div class="header-top-right d-flex align-items-center justify-content-end">
                         <div class="language-part">
                         <i class="fa fa-globe"></i>
-                        <select>
-                            <option>Eng</option>
-                            <option>Ban</option>
-                            <option>Rus</option>
-                            <option>Arb</option>
-                        </select>
+                       <div class="select d-inline-block w-auto ml-xl-3" id="google_translate_element"></div>
                         </div>
                         <div class="header-cart-count">
                     <a href="/dashboard">
