--- a/views/pages/deposit.ejs
+++ b/views/pages/deposit.ejs
@@ -26,14 +26,14 @@
   <!-- preloader end -->
 
     <!-- signin-area start -->
-    <div class="modal fade" id="signInModal" tabindex="-1" role="dialog"  aria-hidden="true">
+    <div class="modal fade" id="signinModal" tabindex="-1" role="dialog"  aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content bdr-radius">
           <div class="signin-wrapper">
             <div class="signin-wrapper-header text-center">
               <div class="logo"><img src="/images/elements/logo-icon.png" alt="image"></div>
               <h3 class="title">Login with</h3>
-              <p>Welcome back, please sign in below</p>
+              <p>Welcome back, please signin below</p>
             </div>
             <form class="signin-form">
               <div class="form-group">
@@ -72,7 +72,7 @@
             <div class="signin-wrapper-header text-center">
               <div class="logo"><img src="/images/elements/logo-icon.png" alt="image"></div>
               <h3 class="title">Login with</h3>
-              <p>Welcome back, please sign in below</p>
+              <p>Welcome back, please signin below</p>
             </div>
             <form class="signin-form">
               <div class="form-group">
@@ -97,7 +97,7 @@
               <button type="submit" class="btn btn-primary btn-hover">Log In</button>
             </form>
             <div class="signin-wrapper-footer">
-              <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
+              <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signinModal" data-dismiss="modal" aria-label="Close">Login</a></p>
               <div class="divider"><span>or</span></div>
 
             </div>
@@ -157,7 +157,7 @@
                 <li><a href="/contact">contact us</a></li>
             </ul>
               <div class="header-join-part">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">join us</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signinModal">signin</button>
               </div>
             </div>
         </nav>
