--- a/views/pages/home-one.ejs
+++ b/views/pages/home-one.ejs
@@ -24,18 +24,18 @@
 
   <!-- preloader end -->
 
-    <!-- signin-area start -->
-   <!-- signin-area start -->
-    <div class="modal fade" id="signInModal" tabindex="-1" role="dialog"  aria-hidden="true">
+    <!-- sign in-area start -->
+   <!-- sign in-area start -->
+    <div class="modal fade" id="sign inModal" tabindex="-1" role="dialog"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content bdr-radius">
-          <div class="signin-wrapper">
-            <div class="signin-wrapper-header text-center">
+          <div class="sign in-wrapper">
+            <div class="sign in-wrapper-header text-center">
               <div class="logo"><img src="/images/elements/logo-icon.png" alt="image"></div>
               <h3 class="title">Login</h3>
               <p>Welcome back, please sign in below</p>
             </div>
-            <form action="/login" method="post" class="signin-form">
+            <form action="/login" method="post" class="sign in-form">
               <div class="form-group">
                 <label for="email">Email*</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email" required>
@@ -53,7 +53,7 @@
               </div>
               <button type="submit" class="btn btn-primary btn-hover">Log In</button>
             </form>
-            <div class="signin-wrapper-footer">
+            <div class="sign in-wrapper-footer">
               <p class="bottom-text">Don’t have an account? <a href="#0" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal" aria-label="Close">Sign Up Now</a></p>
               <div class="divider"><span>or</span></div>
 
@@ -62,19 +62,19 @@
         </div>
       </div>
     </div>
-    <!-- signin-area end -->
+    <!-- sign in-area end -->
     
     <!-- signup-area start -->
     <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content bdr-radius">
-          <div class="signin-wrapper">
-            <div class="signin-wrapper-header text-center">
+          <div class="sign in-wrapper">
+            <div class="sign in-wrapper-header text-center">
               <div class="logo"><img src="/images/elements/logo-icon.png" alt="image"></div>
               <h3 class="title">Created Account</h3>
               <p>please fill the form to create account</p>
             </div>
-            <form action="/registration" method="post" class="signin-form">
+            <form action="/registration" method="post" class="sign in-form">
               <div class="form-group">
                 <label for="fullname">Fullname*</label>
                 <input type="text" class="form-control" name="fullname" id="fullname" placeholder="Enter your Fullname" required>
@@ -96,8 +96,8 @@
               </div>
               <button type="submit" value="submit" class="btn btn-primary btn-hover">Sign Up</button>
             </form>
-            <div class="signin-wrapper-footer">
-              <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
+            <div class="sign in-wrapper-footer">
+              <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#sign inModal" data-dismiss="modal" aria-label="Close">Login</a></p>
               <div class="divider"><span>or</span></div>
 
             </div>
@@ -159,7 +159,7 @@
               <li><a href="/contact">contact us</a></li>
           </ul>
             <div class="header-join-part">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">join us</button>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sign inModal">sign in</button>
             </div>
           </div>
         </nav>
@@ -805,7 +805,7 @@
                   </div>
                 </div>
                 <div class="btn-area text-center">
-                  <a href="#0" class="btn btn-secondary">join us</a>
+                  <a href="#0" class="btn btn-secondary">sign in</a>
                 </div>
               </div>
             </div>
@@ -1197,7 +1197,7 @@
             <h2 class="section-title">Over 7,000 Happy Customers</h2>
             <p>We have many happy investors invest with us .Some impresions from our Customers!  PLease read some of the lovely things our Customers say about us.</p>
             <div class="btn-area">
-              <a href="#0" class="btn btn-primary text-small">join us</a>
+              <a href="#0" class="btn btn-primary text-small">sign in</a>
               <a href="#0" class="btn btn-primary text-small">what we offer</a>
             </div>
           </div>
