--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -26,17 +26,17 @@
 
   <!-- preloader end -->
 
-    <!-- signin-area start -->
-    <div class="modal fade" id="signInModal" tabindex="-1" role="dialog"  aria-hidden="true">
+    <!-- sign in-area start -->
+    <div class="modal fade" id="sign inModal" tabindex="-1" role="dialog"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content bdr-radius">
-          <div class="signin-wrapper">
-            <div class="signin-wrapper-header text-center">
+          <div class="sign in-wrapper">
+            <div class="sign in-wrapper-header text-center">
               <div class="logo"><img src="/images/elements/logo-icon.png" alt="image"></div>
               <h3 class="title">Login</h3>
               <p>Welcome back, please sign in below</p>
             </div>
-            <form action="/login" method="post" class="signin-form">
+            <form action="/login" method="post" class="sign in-form">
               <div class="form-group">
                 <label for="email">Email*</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email" required>
@@ -54,7 +54,7 @@
               </div>
               <button type="submit" class="btn btn-primary btn-hover">Log In</button>
             </form>
-            <div class="signin-wrapper-footer">
+            <div class="sign in-wrapper-footer">
               <p class="bottom-text">Don’t have an account? <a href="#0" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal" aria-label="Close">Sign Up Now</a></p>
               <div class="divider"><span>or</span></div>
 
@@ -63,19 +63,19 @@
         </div>
       </div>
     </div>
-    <!-- signin-area end -->
+    <!-- sign in-area end -->
     
     <!-- signup-area start -->
     <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog"  aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content bdr-radius">
-          <div class="signin-wrapper">
-            <div class="signin-wrapper-header text-center">
+          <div class="sign in-wrapper">
+            <div class="sign in-wrapper-header text-center">
               <div class="logo"><img src="/images/elements/logo-icon.png" alt="image"></div>
               <h3 class="title">Created Account</h3>
               <p>please fill the form to create account</p>
             </div>
-            <form action="/registration" method="post" class="signin-form">
+            <form action="/registration" method="post" class="sign in-form">
               <div class="form-group">
                 <label for="fullname">Fullname*</label>
                 <input type="text" class="form-control" name="fullname" id="fullname" placeholder="Enter your Fullname" required>
@@ -97,8 +97,8 @@
               </div>
               <button type="submit" value="submit" class="btn btn-primary btn-hover">Sign Up</button>
             </form>
-            <div class="signin-wrapper-footer">
-              <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
+            <div class="sign in-wrapper-footer">
+              <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#sign inModal" data-dismiss="modal" aria-label="Close">Login</a></p>
               <div class="divider"><span>or</span></div>
 
             </div>
@@ -160,7 +160,7 @@
               <li><a href="/dashboard">Dashboard</a></li>
           </ul>
             <div class="header-join-part">
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">join us</button>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sign inModal">sign in</button>
             </div>
           </div>
         </nav>
@@ -183,7 +183,7 @@
               <p class="text-white">Use the opportunities of new technologies, without active intervention,create passive income that will ensure your future.</p>
             </div>
             <div class="banner-btn-area">
-              <a href="#0" class="btn btn-info btn-round">get started now!</a>
+              <a href="/dashboard" class="btn btn-info btn-round">get started now!</a>
               <a href="#0" class="video-btn video-btn--info">
                 <span class="icon"><i class="icofont-ui-play"></i></span>
               </a>
@@ -654,20 +654,27 @@
               <li>
                 <div class="icon"><img src="/images/icons/invest-calculate/1.svg" alt="icon-image"></div>
                 <h5 class="package-name">Basic Plan</h5>
-                <span class="percentage">2%</span>
-                <a class="active" id="basic-tab" data-toggle="tab" href="#basic" role="tab" aria-controls="basic" aria-selected="true">calculate</a>
+                <h5 class="package-name">Every 3 Hrs</h5>
+                <h5 class="package-name">twice a day</h5>
+                <span class="percentage">100%</span>
+                <a class="active" id="basic-tab" data-toggle="tab" href="/dashboard" role="tab" aria-controls="basic" aria-selected="true">$200 - $1000</a>
               </li>
               <li>
                   <div class="icon"><img src="/images/icons/invest-calculate/2.svg" alt="icon-image"></div>
                   <h5 class="package-name">satandard Plan</h5>
-                  <span class="percentage">3%</span>
-                <a id="satandard-tab" data-toggle="tab" href="#satandard" role="tab" aria-controls="satandard" aria-selected="false">calculate</a>
+                  <h5 class="package-name">Every 12 Hrs</h5>
+                  <h5 class="package-name">twice a day</h5>
+                  <span class="percentage">100%</span>
+                
+                <a id="satandard-tab" data-toggle="tab" href="/dashboard" role="tab" aria-controls="satandard" aria-selected="false">$1000 - $10,000</a>
               </li>
               <li>
                   <div class="icon"><img src="/images/icons/invest-calculate/3.svg" alt="icon-image"></div>
                   <h5 class="package-name">premium Plan</h5>
-                  <span class="percentage">2%</span>
-                <a id="premium-tab" data-toggle="tab" href="#premium" role="tab" aria-controls="premium" aria-selected="false">calculate</a>
+                  <h5 class="package-name">Every 24 Hrs</h5>
+                  <h5 class="package-name">once a day</h5>
+                  <span class="percentage">100%</span>
+                <a id="premium-tab" data-toggle="tab" href="/dashboard" role="tab" aria-controls="premium" aria-selected="false">$10,000 - $100,000</a>
               </li>
             </ul>
 
