--- a/views/pages/how-work.ejs
+++ b/views/pages/how-work.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Broadtrademining - Isometric Investment Platform</title>
+  <title>Broadtrademining - Isometric Investment Website HTML Templates</title>
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/icofont.css">
@@ -94,7 +94,7 @@
                   <span class="checkbox"></span>
                 </div>
               </div>
-              <button type="submit" value="submit" class="btn btn-primary btn-hover">Sign Up</button>
+              <button type="submit" value="submit" class="btn btn-primary btn-hover">Log In</button>
             </form>
             <div class="signin-wrapper-footer">
               <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
@@ -311,56 +311,110 @@
 
   <!-- footer-section start -->
   <footer class="footer-section">
-    <div class="footer-top bg_img" data-background="/images/footer-bg-3.png">
+    <div class="footer-top bg_img" data-background="/images/footer-bg.png">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-9">
+            <div class="col-lg-8">
             <div class="section-header text-white text-center">
-              <span class="section-subtitle">Subscribe to Broadtrademining</span>
-              <h2 class="section-title">To Get Exclusive Benefits</h2>
+                <span class="section-subtitle">Subscribe us</span>
+                <h2 class="section-title">For Newsletter</h2>
+                <p>Join 14,000+ satisfied Fast Invest customers! <a href="#0">Register</a> and Subscribe to our newsletter to receive all the latest news and updates. </p>
             </div>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-8">
-            <div class="subscribe-wrapper style--two">
-              <form class="subscribe-form">
-                <input type="text" name="subs_name" id="subs_name" placeholder="Your Email Address">
-                <button type="submit" class="subs-btn">subscribe</button>
-              </form>
             </div>
-          </div>
         </div>
         <div class="row">
-          <div class="col-md-3">
-            <div class="footer-widget">
-              <h3 class="widget-title">About Broadtrademining</h3>
-              <ul class="footer-menu-list">
-                <li><a href="/about">About us</a></li>
-                <li><a href="/contact">Contact Us</a></li>
-                <li><a href="/dashboard">Manage Your Account</a></li>
-              </ul>
+            <div class="col-lg-12">
+            <div class="subscribe-wrapper">
+                <span class="icon wow zoomIn" data-wow-duration="0.3s" data-wow-delay="0.5s"><img src="/images/icons/subscribe.png" alt="icon"></span>
+                <form class="subscribe-form">
+                <input type="text" name="subs_name" id="subs_name" placeholder="Your Email Address">
+                <button type="submit" class="subs-btn">subscribe<span class="btn-icon"><img src="/images/icons/paper-plane.png" alt="icon"></span></button>
+                </form>
             </div>
-          </div><!-- footer-widget end -->
+            </div>
         </div>
- 
+        <div class="row">
+            <div class="col-md-3">
+            <div class="footer-widget">
+                <h3 class="widget-title">About Broadtrademining</h3>
+                <ul class="footer-menu-list">
+                <li><a href="#0">About us</a></li>
+                <li><a href="#0">Contact Us</a></li>
+                <li><a href="#0">Latest Blog</a></li>
+                <li><a href="#0">Authenticity Guarantee</a></li>
+                <li><a href="#0">Customer Reviews</a></li>
+                <li><a href="#0">Privacy Policy</a></li>
+                <li><a href="#0">Business License</a></li>
+                </ul>
+            </div>
+            </div><!-- footer-widget end -->
+            <div class="col-md-3">
+            <div class="footer-widget">
+                <h3 class="widget-title">My Account</h3>
+                <ul class="footer-menu-list">
+                <li><a href="#0">Manage Your Account</a></li>
+                <li><a href="#0">How to Deposit</a></li>
+                <li><a href="#0">How to Withdraw</a></li>
+                <li><a href="#0">Account Varification</a></li>
+                <li><a href="#0">Safety & Security</a></li>
+                <li><a href="#0">Investments</a></li>
+                <li><a href="#0">Membership Level</a></li>
+                </ul>
+            </div>
+            </div><!-- footer-widget end -->
+            <div class="col-md-3">
+            <div class="footer-widget">
+                <h3 class="widget-title">help center</h3>
+                <ul class="footer-menu-list">
+                <li><a href="#0">Investor help centre</a></li>
+                <li><a href="#0">Entrepreneur help centre</a></li>
+                <li><a href="#0">FAQ</a></li>
+                <li><a href="#0">Quick Start Guide</a></li>
+                <li><a href="#0">Associate Blog</a></li>
+                <li><a href="#0">Tutorials</a></li>
+                <li><a href="#0">Returns & Claims</a></li>
+                </ul>
+            </div>
+            </div><!-- footer-widget end -->
+            <div class="col-md-3">
+            <div class="footer-widget">
+                <h3 class="widget-title">legal info</h3>
+                <ul class="footer-menu-list">
+                <li><a href="#0">Risk Warnings</a></li>
+                <li><a href="#0">Privacy Notice</a></li>
+                <li><a href="#0">Security</a></li>
+                <li><a href="#0">Terms of Service</a></li>
+                <li><a href="#0">Become Affiliate</a></li>
+                <li><a href="#0">Complaints Policy</a></li>
+                </ul>
+            </div>
+            </div><!-- footer-widget end -->
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="btn-area text-center">
+              <a href="#0" class="wow zoomIn" data-wow-duration="0.3s" data-wow-delay="0.5s"><img src="/images/buttons/google.png" alt="button"></a>
+              <a href="#0" class="wow zoomIn" data-wow-duration="0.7s" data-wow-delay="0.5s"><img src="/images/buttons/apple.png" alt="button"></a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="footer-bottom">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-6">
-            <p class="copy-right-text">Copyright © 2022.All Rights Reserved By <a href="/">Broadtrademining</a></p>
-          </div>
-          <div class="col-lg-6">
-            <div class="card-list text-right">
-              <a href="#0"><img src="/images/icons/card-options/americanexpress.png" alt="image"></a>
-              <a href="#0"><img src="/images/icons/card-options/maestro.png" alt="image"></a>
-              <a href="#0"><img src="/images/icons/card-options/visa.png" alt="image"></a>
-              <a href="#0"><img src="/images/icons/card-options/paypal.png" alt="image"></a>
-              <a href="#0"><img src="/images/icons/card-options/mastercard.png" alt="image"></a>
+            <div class="col-lg-6">
+            <p class="copy-right-text">Copyright © 2020.All Rights Reserved By <a href="/">Broadtrademining</a></p>
             </div>
-          </div>
+            <div class="col-lg-6">
+            <div class="card-list text-right">
+                <a href="#0"><img src="/images/icons/card-options/americanexpress.png" alt="image"></a>
+                <a href="#0"><img src="/images/icons/card-options/maestro.png" alt="image"></a>
+                <a href="#0"><img src="/images/icons/card-options/visa.png" alt="image"></a>
+                <a href="#0"><img src="/images/icons/card-options/paypal.png" alt="image"></a>
+                <a href="#0"><img src="/images/icons/card-options/mastercard.png" alt="image"></a>
+            </div>
+            </div>
         </div>
       </div>
     </div>
