--- a/views/pages/investment-single.ejs
+++ b/views/pages/investment-single.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Broadtrademining - Isometric Investment Platform</title>
+  <title>Behoof - Isometric Investment Website HTML Templates</title>
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/icofont.css">
@@ -15,13 +15,22 @@
   <link rel="stylesheet" href="/css/nice-select.css">
   <link rel="stylesheet" href="/css/animate.css">
   <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="/css/responsive.css">
 </head>
 <body>
 
   <!-- preloader start -->
-
+  <div class="preloader">
+    <div class="preloader-box">
+      <div>L</div>
+      <div>O</div>
+      <div>A</div>
+      <div>D</div>
+      <div>I</div>
+      <div>N</div>
+      <div>G</div>
+    </div>
+  </div>
   <!-- preloader end -->
 
     <!-- signin-area start -->
@@ -56,7 +65,11 @@
             <div class="signin-wrapper-footer">
               <p class="bottom-text">Don’t have an account? <a href="#0" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal" aria-label="Close">Sign Up Now</a></p>
               <div class="divider"><span>or</span></div>
-
+              <ul class="social-list">
+                <li><a href="#0"><i class="fa fa-facebook-f"></i></a></li>
+                <li><a href="#0"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#0"><i class="fa fa-linkedin"></i></a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -94,12 +107,16 @@
                   <span class="checkbox"></span>
                 </div>
               </div>
-              <button type="submit" value="submit" class="btn btn-primary btn-hover">Sign Up</button>
+              <button type="submit" value="submit" class="btn btn-primary btn-hover">Log In</button>
             </form>
             <div class="signin-wrapper-footer">
               <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
               <div class="divider"><span>or</span></div>
-
+              <ul class="social-list">
+                <li><a href="#0"><i class="fa fa-facebook-f"></i></a></li>
+                <li><a href="#0"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#0"><i class="fa fa-linkedin"></i></a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -126,13 +143,18 @@
                 <div class="header-top-right d-flex align-items-center">
                     <div class="language-part">
                     <i class="fa fa-globe"></i>
-<div class="select d-inline-block w-auto ml-xl-3" id="google_translate_element"></div>
+                    <select>
+                        <option>Eng</option>
+                        <option>Ban</option>
+                        <option>Rus</option>
+                        <option>Arb</option>
+                    </select>
                     </div>
                     <div class="header-cart-count">
-                    <a href="/dashboard">
-                      <i class="fa fa-tachometer"></i>
-                      <span>Dashboard</span>
-                    </a>
+                      <a href="checkout.html">
+                        <i class="fa fa-shopping-cart"></i>
+                        <span>My cart (0)</span>
+                      </a>
                     </div>
                 </div>
             </div>
@@ -345,7 +367,7 @@
                   </div>
                   <div class="tab-pane fade" id="update" role="tabpanel" aria-labelledby="update-tab">
                     <div class="notice-message box-shadow text-center mb-30">
-                      <p><b>Important notice.</b> All updates are reviewed or approved by Broadtrademining.</p>
+                      <p><b>Important notice.</b> All updates are reviewed or approved by Behoof.</p>
                     </div>
                     <div class="new-client box-shadow">
                       <div class="new-client-header">
@@ -576,7 +598,7 @@
                   <div class="tab-pane fade" id="discussion" role="tabpanel" aria-labelledby="discussion-tab">
                     <div class="notice-message box-shadow mb-30">
                       <p><b>important notice</b> None of the information in the Discussion constitutes part of the campaign and 
-                        it has not been reviewed or approved by Broadtrademining.</p>
+                        it has not been reviewed or approved by Behoof.</p>
                     </div>
                     <div class="discussion-sort-area d-flex flex-wrap justify-content-end box-shadow">
                       <div class="discussion-sort-select">
@@ -997,7 +1019,7 @@
                           <p>If you are a qualifying investor and choose to invest in this option  from the investor page the funds will leave your account and be held in escrow completely independent from our company funds only to be invested if the invest item reaches at least its minimum funding goal.</p>
                           <p>To make an investment, you will need to become a qualifying investor then setup a payment using a range of payment methods and the money will be transferred direct to the pitch teams business bank account once our process is complete and ONLY IF they reach at least their minimum funding goal. If this does not happen funds are made available for you to reinvest or returned. </p>
                           <p>All monies will be held in a fully segregated client escrow account completely separate from our company accounts ‘earmarked’ for the relevant investment item  with a leading bank who are authorised and regulated to hold such funds and will be transferred to the investment item teams business bank account if the pitch expires whether it reaches at least its minimum funding goal or not.</p>
-                          <p>We do not benefit or receive interest on this money in any way and in the unlikely event that Broadtrademining were to dissolve, your money is fully segregated and separate from our company money.</p>
+                          <p>We do not benefit or receive interest on this money in any way and in the unlikely event that behoof were to dissolve, your money is fully segregated and separate from our company money.</p>
                         </div>
                       </div><!-- single-faq end -->
                       <div class="single-faq">
@@ -1052,7 +1074,7 @@
                       </div><!-- single-faq end -->
                       <div class="single-faq">
                         <div class="faq-header">
-                          <h4 class="faq-title">Does Broadtrademining charge any fees to investors?</h4>
+                          <h4 class="faq-title">Does Behoof charge any fees to investors?</h4>
                           <button type="button" class="toggle-btn"><i class="fa fa-angle-down"></i></button>
                         </div>
                         <div class="faq-body">
@@ -1104,7 +1126,7 @@
                     </div>
                     <div class="documents-area">
                       <h4 class="title">Investment documents</h4>
-                      <span class="subtitle">View and download documents for the Broadtrademining Investment.</span>
+                      <span class="subtitle">View and download documents for the Behoof Investment.</span>
                       <div class="documents-wrapper">
                         <div class="documents-single-item">
                           <div class="left">
@@ -1282,14 +1304,5 @@
   <script src="/js/jquery.countup.min.js"></script>
   <script src="/js/jquery.paroller.min.js"></script>
   <script src="/js/main.js"></script>
-  <script>
-    function googleTranslateElementInit() {
-        new google.translate.TranslateElement(
-            {pageLanguage: 'en'},
-            'google_translate_element'
-        );
-    }
-</script>
-<script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
