--- a/views/pages/investment-two.ejs
+++ b/views/pages/investment-two.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Broadtrademining - Isometric Investment Platform</title>
+  <title>Behoof - Isometric Investment Website HTML Templates</title>
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/icofont.css">
@@ -94,7 +94,7 @@
                   <span class="checkbox"></span>
                 </div>
               </div>
-              <button type="submit" value="submit" class="btn btn-primary btn-hover">Sign Up</button>
+              <button type="submit" value="submit" class="btn btn-primary btn-hover">Log In</button>
             </form>
             <div class="signin-wrapper-footer">
               <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
@@ -576,7 +576,7 @@
         <div class="row">
             <div class="col-md-3">
             <div class="footer-widget">
-                <h3 class="widget-title">About Broadtrademining</h3>
+                <h3 class="widget-title">About Behoof</h3>
                 <ul class="footer-menu-list">
                 <li><a href="#0">About us</a></li>
                 <li><a href="#0">Contact Us</a></li>
@@ -644,7 +644,7 @@
         <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6">
-            <p class="copy-right-text">Copyright © 2022.All Rights Reserved By <a href="/">Broadtrademining</a></p>
+            <p class="copy-right-text">Copyright © 2020.All Rights Reserved By <a href="/">Behoof</a></p>
             </div>
             <div class="col-lg-6">
             <div class="card-list text-right">
