--- a/views/pages/investment.ejs
+++ b/views/pages/investment.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Broadtrademining - Isometric Investment Platform</title>
+  <title>Behoof - Isometric Investment Website HTML Templates</title>
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/icofont.css">
@@ -15,13 +15,22 @@
   <link rel="stylesheet" href="/css/nice-select.css">
   <link rel="stylesheet" href="/css/animate.css">
   <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="/css/responsive.css">
 </head>
 <body>
 
   <!-- preloader start -->
-
+  <div class="preloader">
+    <div class="preloader-box">
+      <div>L</div>
+      <div>O</div>
+      <div>A</div>
+      <div>D</div>
+      <div>I</div>
+      <div>N</div>
+      <div>G</div>
+    </div>
+  </div>
   <!-- preloader end -->
 
     <!-- signin-area start -->
@@ -56,7 +65,11 @@
             <div class="signin-wrapper-footer">
               <p class="bottom-text">Don’t have an account? <a href="#0" data-toggle="modal" data-target="#signUpModal" data-dismiss="modal" aria-label="Close">Sign Up Now</a></p>
               <div class="divider"><span>or</span></div>
-
+              <ul class="social-list">
+                <li><a href="#0"><i class="fa fa-facebook-f"></i></a></li>
+                <li><a href="#0"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#0"><i class="fa fa-linkedin"></i></a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -94,12 +107,16 @@
                   <span class="checkbox"></span>
                 </div>
               </div>
-              <button type="submit" value="submit" class="btn btn-primary btn-hover">Sign Up</button>
+              <button type="submit" value="submit" class="btn btn-primary btn-hover">Log In</button>
             </form>
             <div class="signin-wrapper-footer">
               <p class="bottom-text">Already have an account?<a href="#0" data-toggle="modal" data-target="#signInModal" data-dismiss="modal" aria-label="Close">Login</a></p>
               <div class="divider"><span>or</span></div>
-
+              <ul class="social-list">
+                <li><a href="#0"><i class="fa fa-facebook-f"></i></a></li>
+                <li><a href="#0"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#0"><i class="fa fa-linkedin"></i></a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -127,13 +144,18 @@
                 <div class="header-top-right d-flex align-items-center justify-content-end">
                     <div class="language-part">
                     <i class="fa fa-globe"></i>
-<div class="select d-inline-block w-auto ml-xl-3" id="google_translate_element"></div>
+                    <select>
+                        <option>Eng</option>
+                        <option>Ban</option>
+                        <option>Rus</option>
+                        <option>Arb</option>
+                    </select>
                     </div>
                     <div class="header-cart-count">
-                    <a href="/dashboard">
-                      <i class="fa fa-tachometer"></i>
-                      <span>Dashboard</span>
-                    </a>
+                      <a href="checkout.html">
+                        <i class="fa fa-shopping-cart"></i>
+                        <span>My cart (0)</span>
+                      </a>
                     </div>
                 </div>
             </div>
@@ -577,7 +599,7 @@
         <div class="row">
             <div class="col-md-3">
             <div class="footer-widget">
-                <h3 class="widget-title">About Broadtrademining</h3>
+                <h3 class="widget-title">About Behoof</h3>
                 <ul class="footer-menu-list">
                 <li><a href="#0">About us</a></li>
                 <li><a href="#0">Contact Us</a></li>
@@ -645,7 +667,7 @@
         <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6">
-            <p class="copy-right-text">Copyright © 2022.All Rights Reserved By <a href="/">Broadtrademining</a></p>
+            <p class="copy-right-text">Copyright © 2020.All Rights Reserved By <a href="/">Behoof</a></p>
             </div>
             <div class="col-lg-6">
             <div class="card-list text-right">
@@ -681,14 +703,5 @@
   <script src="/js/jquery.countup.min.js"></script>
   <script src="/js/jquery.paroller.min.js"></script>
   <script src="/js/main.js"></script>
-  <script>
-    function googleTranslateElementInit() {
-        new google.translate.TranslateElement(
-            {pageLanguage: 'en'},
-            'google_translate_element'
-        );
-    }
-</script>
-<script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
