--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -283,7 +283,7 @@
             </div>
             <p>We are 100% funded from our own platform with a team of over 300 professional FinTech investors who all believe the future of finance looks very different from today. Their experience and background covers most areas in finance, technology and startups.66,246 professional investors are waiting to invest.</p>
             <p>We have built the largest global community of professional FinTech investors all investing online in the future of finance in over 50 currencies.</p>
-            <a href="#0" class="btn btn-primary btn-hover">get started</a>
+            <button class="btn btn-primary btn-round"  data-toggle="modal" data-target="#signInModal">get started now!</button>
           </div>
         </div>
         <div class="col-xl-6 order-xl-2 order-1 map-bg">
@@ -624,6 +624,7 @@
   <script src="/js/lightcase.js"></script>
   <script src="/js/owl.carousel.min.js"></script>
   <script src="/js/jquery-ui.min.js"></script>
+  <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script src="/js/wow.min.js"></script>
   <script src="/js/jquery.waypoints.min.js"></script>
   <script src="/js/jquery.countup.min.js"></script>
@@ -637,6 +638,6 @@
         );
     }
 </script>
-<script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </body>
 </html>
