--- a/views/pages/home-one.ejs
+++ b/views/pages/home-one.ejs
@@ -181,7 +181,7 @@
               <p>We are worldwide investment company who are committed to the principle of revenue maximization & reduction of the financial risks at investing.</p>
             </div>
             <div class="banner-btn-area">
-              <a href="#0" class="btn btn-primary btn-round">get started now!</a>
+              <button class="btn btn-primary btn-round"  data-toggle="modal" data-target="#signInModal">get started now!</button>
               <a href="https://www.youtube.com/embed/aFYlAzQHnY4" data-rel="lightcase:myCollection" class="video-btn">
                 <span class="icon"><i class="icofont-ui-play"></i></span>
                 <span class="text">watch video</span>
@@ -1480,6 +1480,7 @@
   <script src="/js/lightcase.js"></script>
   <script src="/js/owl.carousel.min.js"></script>
   <script src="/js/jquery-ui.min.js"></script>
+  <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script src="/js/wow.min.js"></script>
   <script src="/js/jquery.waypoints.min.js"></script>
   <script src="/js/jquery.countup.min.js"></script>
