--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -119,7 +119,7 @@
                   <a href="tel:+88016558888454"><i class="fa fa-headphones"></i>Support</a>
               </div>
               <div class="email-part">
-                  <a href="/cdn-cgi/l/email-protection#81e8efe7eec1e3e4e9eeeee7afe2eeec"><i class="fa fa-envelope"></i><span class="__cf_email__" data-cfemail="adc4c3cbc2edcfc8c5c2c2cb83cec2c0">[email&#160;protected]</span></a>
+                  <a href="/">[email&#160;protected]</span></a>
               </div>
             </div>
           </div>
@@ -183,7 +183,7 @@
               <p class="text-white">Use the opportunities of new technologies, without active intervention,create passive income that will ensure your future.</p>
             </div>
             <div class="banner-btn-area">
-              <a href="/dashboard" class="btn btn-info btn-round">get started now!</a>
+              <button class="btn btn-info btn-round"  data-toggle="modal" data-target="#signInModal">get started now!</button>
               <a href="#0" class="video-btn video-btn--info">
                 <span class="icon"><i class="icofont-ui-play"></i></span>
               </a>
@@ -1439,6 +1439,7 @@
   <script src="/js/lightcase.js"></script>
   <script src="/js/owl.carousel.min.js"></script>
   <script src="/js/jquery-ui.min.js"></script>
+  <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script src="/js/wow.min.js"></script>
   <script src="/js/jquery.waypoints.min.js"></script>
   <script src="/js/jquery.countup.min.js"></script>
@@ -1453,7 +1454,7 @@
         );
     }
 </script>
-<script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 
 
 
