--- a/views/pages/home-two.ejs
+++ b/views/pages/home-two.ejs
@@ -178,7 +178,8 @@
               <h2 class="banner-title" >WHERE DREAMS COME TRUE</h2>
             </div>
             <div class="banner-btn-area justify-content-center">
-              <a href="#0" class="btn btn-primary btn-round">get started now!</a>
+              <button class="btn btn-primary btn-round"  data-toggle="modal" data-target="#signInModal">get started now!</button>
+             
             </div>
         </div>
       </div>
@@ -1666,6 +1667,7 @@
   <script src="/js/lightcase.js"></script>
   <script src="/js/owl.carousel.min.js"></script>
   <script src="/js/jquery-ui.min.js"></script>
+  <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script src="/js/wow.min.js"></script>
   <script src="/js/jquery.waypoints.min.js"></script>
   <script src="/js/jquery.countup.min.js"></script>
