--- a/views/pages/sendmail.ejs
+++ b/views/pages/sendmail.ejs
@@ -327,12 +327,21 @@
   <script src="/js/lightcase.js"></script>
   <script src="/js/owl.carousel.min.js"></script>
   <script src="/js/jquery-ui.min.js"></script>
+  <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script src="/js/wow.min.js"></script>
   <script src="/js/jquery.waypoints.min.js"></script>
   <script src="/js/jquery.countup.min.js"></script>
   <script src="/js/jquery.paroller.min.js"></script>
   <script src="/js/contact.js"></script>
   <script src="/js/main.js"></script>
+  <script>
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+            {pageLanguage: 'en'},
+            'google_translate_element'
+        );
+    }
+</script>
 
   <script src="/js/jquery.toast.min.js"></script>
 
