--- a/views/pages/investment-single.ejs
+++ b/views/pages/investment-single.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Behoof - Isometric Investment Website HTML Templates</title>
+  <title>Broadtrademining - Isometric Investment Website HTML Templates</title>
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/icofont.css">
@@ -367,7 +367,7 @@
                   </div>
                   <div class="tab-pane fade" id="update" role="tabpanel" aria-labelledby="update-tab">
                     <div class="notice-message box-shadow text-center mb-30">
-                      <p><b>Important notice.</b> All updates are reviewed or approved by Behoof.</p>
+                      <p><b>Important notice.</b> All updates are reviewed or approved by Broadtrademining.</p>
                     </div>
                     <div class="new-client box-shadow">
                       <div class="new-client-header">
@@ -598,7 +598,7 @@
                   <div class="tab-pane fade" id="discussion" role="tabpanel" aria-labelledby="discussion-tab">
                     <div class="notice-message box-shadow mb-30">
                       <p><b>important notice</b> None of the information in the Discussion constitutes part of the campaign and 
-                        it has not been reviewed or approved by Behoof.</p>
+                        it has not been reviewed or approved by Broadtrademining.</p>
                     </div>
                     <div class="discussion-sort-area d-flex flex-wrap justify-content-end box-shadow">
                       <div class="discussion-sort-select">
@@ -1019,7 +1019,7 @@
                           <p>If you are a qualifying investor and choose to invest in this option  from the investor page the funds will leave your account and be held in escrow completely independent from our company funds only to be invested if the invest item reaches at least its minimum funding goal.</p>
                           <p>To make an investment, you will need to become a qualifying investor then setup a payment using a range of payment methods and the money will be transferred direct to the pitch teams business bank account once our process is complete and ONLY IF they reach at least their minimum funding goal. If this does not happen funds are made available for you to reinvest or returned. </p>
                           <p>All monies will be held in a fully segregated client escrow account completely separate from our company accounts ‘earmarked’ for the relevant investment item  with a leading bank who are authorised and regulated to hold such funds and will be transferred to the investment item teams business bank account if the pitch expires whether it reaches at least its minimum funding goal or not.</p>
-                          <p>We do not benefit or receive interest on this money in any way and in the unlikely event that behoof were to dissolve, your money is fully segregated and separate from our company money.</p>
+                          <p>We do not benefit or receive interest on this money in any way and in the unlikely event that Broadtrademining were to dissolve, your money is fully segregated and separate from our company money.</p>
                         </div>
                       </div><!-- single-faq end -->
                       <div class="single-faq">
@@ -1074,7 +1074,7 @@
                       </div><!-- single-faq end -->
                       <div class="single-faq">
                         <div class="faq-header">
-                          <h4 class="faq-title">Does Behoof charge any fees to investors?</h4>
+                          <h4 class="faq-title">Does Broadtrademining charge any fees to investors?</h4>
                           <button type="button" class="toggle-btn"><i class="fa fa-angle-down"></i></button>
                         </div>
                         <div class="faq-body">
@@ -1126,7 +1126,7 @@
                     </div>
                     <div class="documents-area">
                       <h4 class="title">Investment documents</h4>
-                      <span class="subtitle">View and download documents for the Behoof Investment.</span>
+                      <span class="subtitle">View and download documents for the Broadtrademining Investment.</span>
                       <div class="documents-wrapper">
                         <div class="documents-single-item">
                           <div class="left">
