--- a/views/pages/security.ejs
+++ b/views/pages/security.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Behoof - Isometric Investment Website HTML Templates</title>
+  <title>Broadtrademining - Isometric Investment Website HTML Templates</title>
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/icofont.css">
@@ -219,7 +219,7 @@
             <div class="section-header text-center">
               <span class="section-subtitle">Our client's funds security is</span>
               <h2 class="section-title">Our Top Priority</h2>
-              <p>With Behoof you can be absolutely sure your deposits are secured in every possible way.Here are some of the measures we take to ensure funds protection: </p>
+              <p>With Broadtrademining you can be absolutely sure your deposits are secured in every possible way.Here are some of the measures we take to ensure funds protection: </p>
             </div>
             <div class="security-single">
               <div class="thumb"><img src="/images/security/1.png" alt="image"></div>
@@ -235,7 +235,7 @@
               <div class="content">
                 <span class="subtitle">Two-step authentication</span>
                 <h2 class="title">acct verification</h2>
-                <p>behoof recommends you to verify your account by submitting your personal ID scan and an address proof. This simple measure will make sure your transactions are authorized and secured.</p>
+                <p>Broadtrademining recommends you to verify your account by submitting your personal ID scan and an address proof. This simple measure will make sure your transactions are authorized and secured.</p>
                 <a href="#0" class="btn btn-primary btn-hover text-small">read more</a>
               </div>
             </div><!-- security-single end -->
@@ -244,7 +244,7 @@
               <div class="content">
                 <span class="subtitle">Safety and Security</span>
                 <h2 class="title">Withdrawal Rules</h2>
-                <p>Since a withdrawal from a live account requires an email confirmation, no one can ever access your account but yourself. It is also required that you use the same payment details for deposits and withdrawals. Thus, under no circumstances can behoof  transfer your withdrawal to an unauthorized third party.</p>
+                <p>Since a withdrawal from a live account requires an email confirmation, no one can ever access your account but yourself. It is also required that you use the same payment details for deposits and withdrawals. Thus, under no circumstances can Broadtrademining  transfer your withdrawal to an unauthorized third party.</p>
                 <a href="#0" class="btn btn-primary btn-hover text-small">read more</a>
               </div>
             </div><!-- security-single end -->
@@ -253,7 +253,7 @@
               <div class="content">
                 <span class="subtitle">authorization</span>
                 <h2 class="title">3D secure Visa & Mastercard</h2>
-                <p>behoof recommends you to verify your account by submitting your personal ID scan and an address proof. This simple measure will make sure your transactions are authorized and secured.</p>
+                <p>Broadtrademining recommends you to verify your account by submitting your personal ID scan and an address proof. This simple measure will make sure your transactions are authorized and secured.</p>
                 <a href="#0" class="btn btn-primary btn-hover text-small">read more</a>
               </div>
             </div><!-- security-single end -->
@@ -291,7 +291,7 @@
         <div class="row">
             <div class="col-md-3">
             <div class="footer-widget">
-                <h3 class="widget-title">About Behoof</h3>
+                <h3 class="widget-title">About Broadtrademining</h3>
                 <ul class="footer-menu-list">
                 <li><a href="#0">About us</a></li>
                 <li><a href="#0">Contact Us</a></li>
@@ -359,7 +359,7 @@
       <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6">
-            <p class="copy-right-text">Copyright © 2020.All Rights Reserved By <a href="/">Behoof</a></p>
+            <p class="copy-right-text">Copyright © 2020.All Rights Reserved By <a href="/">Broadtrademining</a></p>
             </div>
             <div class="col-lg-6">
             <div class="card-list text-right">
